Fix SettingsTab not showing in landscape mode

--- a/packages/tv-ui/src/components/SettingsTab/SettingsTab.scss
+++ b/packages/tv-ui/src/components/SettingsTab/SettingsTab.scss
@@ -16,7 +16,7 @@
     position: absolute;
     top: -50%;
     right: 0;
-    width: 200%;
+    width: calc(var(--x-unit-large) * 120);
     height: 200%;
     background-color: inherit;
   }
@@ -130,10 +130,10 @@
 
 .settings-overlay {
   position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  top: -50%;
+  left: -50%;
+  width: calc(var(--x-unit-large) * 200);
+  height: calc(var(--y-unit-large) * 200);
   background-color: rgba(0, 0, 0, 0.5);
   cursor: pointer;
 }
