--- a/packages/tv-ui/src/components/VideoItem/VideoItem.scss
+++ b/packages/tv-ui/src/components/VideoItem/VideoItem.scss
@@ -170,7 +170,7 @@
     flex-direction: column;
     justify-content: end;
     align-items: end;
-    z-index: 1;
+    z-index: 2;
     pointer-events: none;
     
     > * {
