--- a/packages/tv-ui/src/styles/globals.scss
+++ b/packages/tv-ui/src/styles/globals.scss
@@ -159,6 +159,7 @@ html.force-landscape body {
   transform: translate(-50%, -50%) rotate(-90deg);
   transform-origin: center center 0px;
   overflow-y: scroll;
+  overflow-x: hidden; /* Prevent SettingsTab from causing horizontal scroll */
   scroll-snap-type: y mandatory;
 }
 
